# FDFKursusAdmin

./: .gitignore  .platform.app.yaml  Pipfile  Procfile  db.sqlite3  manage.py  pyproject.toml  readme.md  render.yaml  render.yml  requirements.txt  test_helpers.py  test_settings.py
.github/: dependabot.yml
.platform/: applications.yaml  pip.app.yaml
AktivitetsTeam/: admin.py  forms.py  htmx.py  models.py  serializers.py  urls.py  views.py
Butikken/: admin.py  api.py  forms.py  htmx.py  models.py  serializers.py  urls.py  views.py
Depot/: admin.py  api.py  forms.py  htmx.py  models.py  serializers.py  urls.py  views.py
Foto/: admin.py  forms.py  models.py  urls.py  views.py
KursusOrganisation/: admin.py  api.py  forms.py  htmx.py  models.py  serializers.py  urls.py  views.py
Location/: admin.py  api.py  forms.py  htmx.py  models.py  serializers.py  urls.py  views.py
Mad/: admin.py  api.py  forms.py  htmx.py  models.py  serializers.py  urls.py  views.py
SKSBooking2023/: asgi.py  settings.py  urls.py  views.py  wsgi.py
SOS/: admin.py  forms.py  models.py  views.py
Sjak/: admin.py  api.py  forms.py  htmx.py  models.py  serializers.py  urls.py  views.py
Support/: admin.py  api.py  forms.py  htmx.py  models.py  serializers.py  urls.py  views.py
Teknik/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
organization/: admin.py  api.py  forms.py  htmx.py  middleware.py  models.py  serializers.py  urls.py  views.py
polls/: admin.py  models.py  urls.py  views.py
staticfiles/: staticfiles.json
templates/: base.html  dashboard.html  (+3 more)
(+272 files in other folders)
