[tool.poetry]
name = "sksbooking2023"
version = "0.1.0"
description = "SKS booking system"
authors = ["Markus Glavind <glavindmarkus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
